--- a/config/scaffolding/SIQA_2712_AZPPProject.yml
+++ b/config/scaffolding/SIQA_2712_AZPPProject.yml
@@ -7,3 +7,8 @@ packages:
   gitUrl: https://github.com/siqagituser
   gitUsername: siqagituser
   gitBranch: main
+- name: TPP_services_in_FCS
+  gitServerName: SIQA_kvv_wm_io
+  gitUrl: https://github.webmethods.io/kvv
+  gitUsername: kvv
+  gitBranch: main
