--- a/config/scaffolding/SIQA_2712_AZPPProject.yml
+++ b/config/scaffolding/SIQA_2712_AZPPProject.yml
@@ -7,18 +7,18 @@ packages:
   gitUrl: https://github.com/siqagituser
   gitUsername: siqagituser
   gitBranch: main
-- name: TPP_services_in_FCS
-  version: "1.0"
-  gitServerName: SIQA_kvv_wm_io
-  gitUrl: https://github.webmethods.io/kvv
-  gitUsername: kvv
-  gitBranch: main
 - name: SIQA_OriginTest_OnPremAssets
   version: "1.0"
   gitServerName: siqagituser
   gitUrl: https://github.com/vijetadixit
   gitUsername: siqagituser
   gitBranch: Test
+- name: TPP_services_in_FCS
+  version: "1.0"
+  gitServerName: SIQA_kvv_wm_io
+  gitUrl: https://github.webmethods.io/kvv
+  gitUsername: kvv
+  gitBranch: one_service
 services:
 - serviceName: project.siqa_2712_azpp.integrations:tpp_daf
   packages:
