--- a/config/scaffolding/SIQA_2712_AZPPProject.yml
+++ b/config/scaffolding/SIQA_2712_AZPPProject.yml
@@ -18,7 +18,7 @@ packages:
   gitServerName: SIQA_kvv_wm_io
   gitUrl: https://github.webmethods.io/kvv
   gitUsername: kvv
-  gitBranch: one_service
+  gitBranch: main
 services:
 - serviceName: project.siqa_2712_azpp.integrations:tpp_daf
   packages:
