Scaffolding Updated build #11

--- a/config/scaffolding/SIQA_2712_AZPPProject.yml
+++ b/config/scaffolding/SIQA_2712_AZPPProject.yml
@@ -19,6 +19,11 @@ packages:
   gitUrl: https://github.webmethods.io/kvv
   gitUsername: kvv
   gitBranch: main
+- name: SIQAJDBCAdapterTests
+  gitServerName: SIQA_kvv_wm_io
+  gitUrl: https://github.webmethods.io/mjan
+  gitUsername: kvv
+  gitBranch: main
 services:
 - serviceName: project.siqa_2712_azpp.integrations:tpp_daf
   packages:
