Scaffolding Updated build #12

--- a/config/scaffolding/SIQA_2712_AZPPProject.yml
+++ b/config/scaffolding/SIQA_2712_AZPPProject.yml
@@ -24,6 +24,11 @@ packages:
   gitUrl: https://github.webmethods.io/mjan
   gitUsername: kvv
   gitBranch: main
+- name: DADA_GlobalVariable1
+  gitServerName: SIQA_kvv_wm_io
+  gitUrl: https://github.webmethods.io/mjan
+  gitUsername: kvv
+  gitBranch: main
 services:
 - serviceName: project.siqa_2712_azpp.integrations:tpp_daf
   packages:
